# raspi-basestation

./: Makefile  README.md  go.mod  go.sum  main.go  polyloop.sqlite3  sensor.proto  sqlc.yaml
.devcontainer/: Dockerfile  devcontainer.json
client/: CMakeLists.txt  client.cc
client/.devcontainer/: Dockerfile
client/pb/: sensor.pb.cc  sensor.pb.h
database/: db.go  models.go  polyloop.db  polyloop.sqlite3
database/sql/: schema.sql
database/sql/queries/: brake_manager.sql  main_computer.sql
database/sqlc/: brake_manager.sql.go  main_computer.sql.go  models.go
db/: db.go  models.go  query.sql.go
db/sql/: schema.sql
db/sql/queries/: brake_manager.sql  main_computer.sql  query.sql  sensor.sql  sensor_data.sql
db/sql/schema/: schema.sql
db/sqlc/: brake_manager.sql.go  main_computer.sql.go  models.go  sensor.sql.go  sensor_data.sql.go
internal/: error.go
pb/: sensor.pb.go  sensor.proto  sensorstate.pb.go  sensorstate.proto
server/: server.go
server/api/: api.go  handlers.go
web/: package.json  pnpm-lock.yaml
web/pb/: sensor.ts  sensorstate.ts
web/src/: App.tsx  store.ts  ws.ts
